# kainban

./: .gitignore  README  README.md  docker-compose.yaml
agent/codex/: Dockerfile  codex_mcp.py
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-16a9885a3641b97348a342b5a0cc2aa0b890653dab5c4609c546c531f65b6a45.json  query-3fbe14df4636d7abbed8fb508eb59ea2301c529185f8dfed061b3a53907e16a7.json  query-4ec2def63e3ce8ce925563965777de8218868067580d4d8d4fc68fe60a9a16a7.json  query-e8ff9a4e580daf8cdee856e11b701ff94fb278222c2f2307886dee17acb30021.json  query-f71ee1801fb86ecd0b520a893fc2c5557e6daae3f2cfb9c0b42789a53e7bd93e.json
backend/migrations/: 20251207143825_create_agents.sql  20251207143830_create_jobs.sql  20251207143844_create_job_logs.sql  20251207150000_add_agent_tokens_and_users.sql
backend/src/: auth.rs  config.rs  db.rs  main.rs  token.rs
backend/src/models/: agent.rs  job.rs  job_log.rs  mod.rs  user.rs
backend/src/routes/: agents.rs  healthz.rs  jobs.rs  mod.rs  users.rs
