[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7"}
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-core = "0.1.35"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
